# DiffieHellmanCracker

./: Cargo.toml  README.md
src/: eve.rs  main.rs
unit_tests/: randomized_test_baby.rs  randomized_test_big.rs
